Dark/Light Mode Integration
WIP Landing page with toggle of dark/light and default mode.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
  
 html,
 body,
@@ -69,6 +70,8 @@ body,
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
     --ring: 0 0% 83.1%;
+
+     @apply text-white;
   }
 }
  
